# verus-sapling

./: .gitignore  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crate/: Cargo.toml  rust-toolchain.toml
crate/examples/: build_t2z.rs  build_z2z.rs  detect.rs  read_note.rs  smoke.rs  verify_golden.rs
crate/pkg/: package.json  verus_sapling_prover.d.ts  verus_sapling_prover.js  verus_sapling_prover_bg.wasm  verus_sapling_prover_bg.wasm.d.ts
crate/src/: golden.rs  json_api.rs  lib.rs  scan.rs  tx.rs  wasm.rs  z2z.rs
crate/tests/: golden_sighash.rs
examples/extension/: README.md  build.mjs  manifest.json  popup.html  popup.ts  worker.ts
examples/messenger/: README.md  demo.mjs  message.mjs
proto/: compact_formats.proto
src/: backend.ts  errors.ts  hex.ts  index.ts  lightwalletd.ts  money.ts  parse.ts  types.ts  wallet.ts  wasm.ts  zaddr.ts
src/browser/: grpcweb.ts  index.ts  lightwalletd-web.ts  protobuf.ts  prover-worker.ts  worker-prover.ts
test/: grpcweb.test.ts  hex.test.ts  lightwalletd-web.test.ts  money.test.ts  parse.test.ts  protobuf.test.ts  wallet.test.ts  wasm_smoke.mjs  zaddr.test.ts
test/vectors/: README.md  parse_fixture.json  t2z.hex  t2z.json  z2t.hex  z2t.json  z2z.hex  z2z.json
