[package]
name = "verus-sapling-prover"
version = "0.0.0"
edition = "2021"
description = "Sapling proving/signing core for Verus shielded transactions (t->z, z->z, z->t). Native + wasm32."
license = "Apache-2.0"
publish = false

[lib]
# cdylib for the wasm32 build (wasm-pack); rlib for native examples/tests.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Sapling: circuit + Groth16 prover, RedJubjub sigs, note encryption, bundle Builder.
# `multicore` (bellman rayon) does NOT work on wasm32, so it is OFF here and
# re-enabled only for non-wasm targets below.
sapling-crypto = { version = "0.7", default-features = false, features = ["circuit"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
blake2b_simd = "1"
zcash_note_encryption = "0.4"
serde_json = "1"

# Native (non-wasm): enable multicore proving for speed.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sapling-crypto = { version = "0.7", default-features = false, features = ["multicore"] }

# wasm32: wasm-bindgen boundary + getrandom via the browser crypto API.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For the golden-vector sighash/binding-sig verification example.
bellman = "0.14"
bls12_381 = "0.8"
jubjub = "0.10"
redjubjub = "0.8"
group = "0.14"
